Theming fixes & add external library css FontAwesome icons

--- a/templates/crop-sidebar.html.twig
+++ b/templates/crop-sidebar.html.twig
@@ -20,7 +20,7 @@ has_parent ? 'js-form-wrapper',
 has_parent ? 'form-wrapper',
 ] %}
 <section {{ attributes.addClass(classes) }}>
-    <h1 class='image-ratio--title'>Recadrage</h1>
+    <h1 class='image-ratio--title'>Crop List</h1>
 
     <{{ element_type }}>
         {{ items }}
