--- a/css/image_widget_crop.css
+++ b/css/image_widget_crop.css
@@ -286,6 +286,20 @@
   position: relative;
 }
 
+.crop-wrapper .preview-wrapper-crop .crop-preview-wrapper-list#crop-help {
+  display: block;
+  position: relative;
+  border: 5px dotted rgb(97, 204, 134);
+  display: block;
+  text-align: center;
+  overflow: hidden;
+}
+
+.crop-wrapper .preview-wrapper-crop .crop-preview-wrapper-list#crop-help img{
+  float: none;
+  text-align: center;
+}
+
 .crop-wrapper .preview-wrapper-crop .crop-preview-wrapper-list .content-crop-img {
   overflow: hidden;
 }
